# Chess

./: CMakeLists.txt
src/cpp/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Chess.cpp  Empty.cpp  Empty.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
